# llm-telemetry-toolkit

./: .gitignore  README.md  ollama_client.py  pyproject.toml  settings.example.cfg  verify_ollama.py  verify_toolkit.py
.github/workflows/: python-publish.yml
src/llm_telemetry_toolkit/: __init__.py
src/llm_telemetry_toolkit/core/: __init__.py  context.py  decorators.py  logger.py
src/llm_telemetry_toolkit/interface/: __init__.py  cli.py
src/llm_telemetry_toolkit/io/: __init__.py  formatters.py  parser.py  utils.py
src/llm_telemetry_toolkit/models/: __init__.py  config.py  results.py  schema.py
src/llm_telemetry_toolkit/observability/: __init__.py  otel.py
src/llm_telemetry_toolkit/providers/: __init__.py  ollama.py
tests/: __init__.py  test_core.py  test_helper.py  test_io.py  test_models.py  test_ollama_integration.py  test_providers.py
